<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/nav_header_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ddicon56"
        android:layout_alignParentLeft="true"
        android:contentDescription="Img_logo" />

    <com.hevaisoi.android.control.TextAwesome
        style="@style/AppTheme.ContactInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact_info_web"
        android:layout_toRightOf="@id/imageView"
        android:text="@string/my_web"
        android:layout_marginLeft="@dimen/text_margin"
        android:textAlignment="textStart"
        tools:ignore="RtlHardcoded" />

    <com.hevaisoi.android.control.TextAwesome
        style="@style/AppTheme.ContactInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageView"
        android:layout_below="@id/contact_info_web"
        android:text="@string/my_face_page"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_marginLeft="@dimen/text_margin"
        android:textAlignment="textStart" />

    <com.hevaisoi.android.control.TextAwesome
        style="@style/AppTheme.ContactInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact_info_phone"
        android:layout_below="@id/imageView"
        android:text="@string/my_phone"
        android:textAlignment="textStart"
        android:paddingTop="@dimen/nav_header_vertical_spacing" />
</RelativeLayout>